--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-babel": "^5.0.0",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^1.3.3",
     "gulp-server-livereload": "^1.2.1",
     "gulp-watch": "^4.2.2"
