--- a/package.json
+++ b/package.json
@@ -4,27 +4,31 @@
   "description": "Access your FourSquare/Swarm history on the web",
   "main": "index.html",
   "dependencies": {
-    "leaflet": "^1.0.0-beta.1"
+    "leaflet": "0.7.7"
   },
   "devDependencies": {
     "babel-core": "^5.8.19",
     "babel-loader": "^5.3.2",
+    "css-loader": "^0.23.0",
     "es6-promise": "^2.3.0",
     "expect.js": "^0.3.1",
-    "gulp": "^3.8.11",
-    "gulp-babel": "^5.0.0",
-    "gulp-sass": "^1.3.3",
-    "gulp-server-livereload": "^1.2.1",
-    "gulp-watch": "^4.2.2",
+    "file-loader": "^0.8.4",
+    "gulp": "^3.9.0",
+    "gulp-server-livereload": "^1.5.4",
+    "gulp-watch": "^4.3.5",
+    "live-server": "^0.8.2",
     "mocha": "^2.2.5",
-    "mocha-phantomjs": "^3.6.0",
-    "phantomjs": "^1.9.7-15",
+    "mocha-phantomjs": "^4.0.1",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
+    "watch": "^0.16.0",
     "webpack": "^1.10.5"
   },
   "scripts": {
     "build": "webpack",
     "watch": "gulp",
-    "start": "gulp webserver",
+    "webserver": "live-server ./dist --port=8000",
+    "start": "npm run build && npm run webserver",
     "test": "mocha-phantomjs -s loadImages=false -s localToRemoteUrlAccessEnabled=true -s webSecurityEnabled=false ./dist/test/runner.html"
   },
   "author": "Alan Mooiman <alan@alanmooiman.com>",
